# blackboard

./: .gitignore  .luarc.json  BlackboardConfig.h  CMakeLists.txt  build.sh  data.txt
LuaEngine/: LuaEngine.h  Structs.h
WidgetEngine/: Structs.h  WidgetEngine.h  Widgets.h
greeter/: greeter.cpp
greeter-build/: CMakeCache.txt  Makefile  cmake_install.cmake
greeter-build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
headers/: LuaEngine.h  NotificationListener.h  WidgetEngine.h
sol/: optional_implementation.hpp
src/: BlackboardConfig.cpp  LuaEngine.cpp  NotificationListener.cpp  WidgetEngine.cpp  annotations.lua  api.lua  main.cpp  script.lua
src/LuaEngine/: Animations.cpp  Bindings.cpp  Button.cpp  Callbacks.cpp  Hooks.cpp  Label.cpp  Layouts.cpp  LineEdit.cpp  LuaEngine.cpp  Metatables.cpp  Signals.cpp  States.cpp  WidgetList.cpp  Widgets.cpp  Window.cpp
src/WidgetEngine/: Animations.cpp  Layouts.cpp  Monitors.cpp  Properties.cpp  WidgetEngine.cpp  Widgets.cpp
src/scripts/: blackboard.lua
